--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^5.2.11"
+    },
+    "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-react": "^0.8.1",
+        "react-paginate": "^8.2.0"
     }
 }
